aka-api/deployments/api/service.yaml
# Source: auto-deploy-app/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8084
      protocol: TCP
      name: web
